== 0.0.1

  * Initial release [Ian White, José Valim]