@@ -1,3 +1,8 @@
+== master
+
+  * Extract tests into shared example.  Give instructions on how to write a new adapter. [Ian White]
+
+
 == 0.0.1
 
   * Initial release [Ian White, José Valim]
